# agentgate

./: .gitignore  README.md  pyproject.toml
.serena/: project.yml
agentgate/: __init__.py  action_space.py  approval.py  audit.py  baseline.py  benchmark.py  cli.py  decision.py  engine.py  evaluation.py  loop.py  risk.py  router.py  sanitizer.py  schemas.py  tools.py
agentgate/detectors/: __init__.py  base.py  injection_llm.py  intent.py  payment_phishing.py  pii.py  prompt_injection.py  secrets.py  source_code.py
agentgate/executors/: __init__.py  base.py  mock.py
agentgate/planner/: __init__.py  base.py  llm.py  replay.py
agentgate/policy/: __init__.py  engine.py
agentgate/policy/packs/: booking.json  code_data.json  global_safety.json  productivity.json
benchmarks/: bakeoff.py  coverage_eval.py
benchmarks/data/: coverage_eval.json  injection_eval.json
scenarios/: booking_message.json  eval_set.json  productivity_archive.json  sensitive_code.json
sprint_story/: DS_slides_outline.md  DS_sprint2_outline.md  DS_sprint_narrative.md
tests/: test_agentgate.py
