[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "agentgate"
version = "0.1.0"
description = "A pre-action guardrail for AI agent tool calls."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []   # core engine is pure stdlib; runs with no third-party packages

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
agentgate = "agentgate.cli:main"

[tool.setuptools.packages.find]
include = ["agentgate*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
